adding day 3 notebook/data

--- a/day_1/day_1_notebook.ipynb
+++ b/day_1/day_1_notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "846ec78c",
+   "id": "67554e70",
    "metadata": {},
    "source": [
     "--- Day 1: Calorie Counting ---\n",
@@ -48,7 +48,7 @@
   {
    "cell_type": "code",
    "execution_count": 23,
-   "id": "2bd022a3",
+   "id": "e0d86e15",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "ca769bf3",
+   "id": "8e83fbf9",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -90,7 +90,7 @@
   {
    "cell_type": "code",
    "execution_count": 30,
-   "id": "8b39908d",
+   "id": "407de9ee",
    "metadata": {},
    "outputs": [
     {
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "a06a3731",
+   "id": "2bc550e0",
    "metadata": {},
    "outputs": [
     {
@@ -1135,7 +1135,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "1a719888",
+   "id": "86679c05",
    "metadata": {},
    "outputs": [
     {
@@ -1156,7 +1156,7 @@
   {
    "cell_type": "code",
    "execution_count": 19,
-   "id": "b2d5b355",
+   "id": "ed616eb6",
    "metadata": {},
    "outputs": [
     {
@@ -1182,7 +1182,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "6dfd9a96",
+   "id": "66fc85bc",
    "metadata": {},
    "outputs": [
     {
@@ -2611,7 +2611,7 @@
   {
    "cell_type": "code",
    "execution_count": 59,
-   "id": "6f20746f",
+   "id": "7ee43dc3",
    "metadata": {},
    "outputs": [
     {
@@ -2632,7 +2632,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "0b28f5ac",
+   "id": "c2ea5e55",
    "metadata": {},
    "outputs": [
     {
@@ -2674,7 +2674,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "c6c033ff",
+   "id": "dbdcc22f",
    "metadata": {},
    "outputs": [
     {
@@ -3630,7 +3630,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "d1929c0e",
+   "id": "f4ba08e2",
    "metadata": {},
    "outputs": [
     {
@@ -3651,7 +3651,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "a9d38390",
+   "id": "91e76aea",
    "metadata": {},
    "outputs": [
     {
@@ -3672,7 +3672,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "66d398da",
+   "id": "63f5136d",
    "metadata": {},
    "outputs": [
     {
@@ -3693,7 +3693,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "f6befc07",
+   "id": "982f215d",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3711,7 +3711,7 @@
   {
    "cell_type": "code",
    "execution_count": 75,
-   "id": "3864710e",
+   "id": "a931a8c6",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -3732,7 +3732,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "952dfe97",
+   "id": "c0b56869",
    "metadata": {},
    "outputs": [
     {
@@ -3754,7 +3754,7 @@
   {
    "cell_type": "code",
    "execution_count": 29,
-   "id": "6a8ac3fe",
+   "id": "e48561d3",
    "metadata": {},
    "outputs": [
     {
@@ -3773,7 +3773,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "17fe5634",
+   "id": "d711d278",
    "metadata": {},
    "outputs": [
     {
@@ -3795,7 +3795,7 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "839ac63f",
+   "id": "2d265afb",
    "metadata": {},
    "outputs": [
     {
@@ -3817,7 +3817,7 @@
   {
    "cell_type": "code",
    "execution_count": 13,
-   "id": "b193a7f3",
+   "id": "1e2cd336",
    "metadata": {},
    "outputs": [
     {
@@ -3839,7 +3839,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "f344b048",
+   "id": "1a940397",
    "metadata": {},
    "outputs": [
     {
@@ -3862,7 +3862,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "339ca770",
+   "id": "02a694b0",
    "metadata": {},
    "outputs": [
     {
@@ -3889,7 +3889,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7f1fb8b9",
+   "id": "0f7f20a5",
    "metadata": {},
    "source": [
     "# part 2:\n",
@@ -3907,269 +3907,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
-   "id": "430a4a5e",
+   "execution_count": 82,
+   "id": "5ed5a5ef",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[70613,\n",
-       " 68330,\n",
-       " 66862,\n",
-       " 66459,\n",
-       " 65939,\n",
-       " 64875,\n",
-       " 62472,\n",
-       " 61690,\n",
-       " 61660,\n",
-       " 61586,\n",
-       " 61576,\n",
-       " 61472,\n",
-       " 61139,\n",
-       " 61011,\n",
-       " 60824,\n",
-       " 60742,\n",
-       " 60621,\n",
-       " 60086,\n",
-       " 60049,\n",
-       " 59597,\n",
-       " 59394,\n",
-       " 59320,\n",
-       " 59312,\n",
-       " 59301,\n",
-       " 59084,\n",
-       " 59077,\n",
-       " 58973,\n",
-       " 58633,\n",
-       " 58621,\n",
-       " 58500,\n",
-       " 58206,\n",
-       " 58171,\n",
-       " 57887,\n",
-       " 57671,\n",
-       " 57449,\n",
-       " 57223,\n",
-       " 56849,\n",
-       " 56760,\n",
-       " 56680,\n",
-       " 56577,\n",
-       " 56445,\n",
-       " 56328,\n",
-       " 55980,\n",
-       " 55975,\n",
-       " 55850,\n",
-       " 55244,\n",
-       " 55167,\n",
-       " 55042,\n",
-       " 55007,\n",
-       " 54909,\n",
-       " 54699,\n",
-       " 54687,\n",
-       " 54621,\n",
-       " 54588,\n",
-       " 54497,\n",
-       " 54447,\n",
-       " 54324,\n",
-       " 54179,\n",
-       " 54122,\n",
-       " 54053,\n",
-       " 54040,\n",
-       " 53838,\n",
-       " 53804,\n",
-       " 53774,\n",
-       " 53703,\n",
-       " 53561,\n",
-       " 53555,\n",
-       " 53500,\n",
-       " 53324,\n",
-       " 53094,\n",
-       " 53078,\n",
-       " 52999,\n",
-       " 52812,\n",
-       " 52721,\n",
-       " 52713,\n",
-       " 52593,\n",
-       " 52556,\n",
-       " 52538,\n",
-       " 52524,\n",
-       " 52490,\n",
-       " 52464,\n",
-       " 52453,\n",
-       " 52450,\n",
-       " 52435,\n",
-       " 52381,\n",
-       " 52321,\n",
-       " 52091,\n",
-       " 51981,\n",
-       " 51881,\n",
-       " 51845,\n",
-       " 51773,\n",
-       " 51765,\n",
-       " 51687,\n",
-       " 51429,\n",
-       " 51428,\n",
-       " 51413,\n",
-       " 51337,\n",
-       " 51316,\n",
-       " 51292,\n",
-       " 51246,\n",
-       " 51201,\n",
-       " 51016,\n",
-       " 50938,\n",
-       " 50886,\n",
-       " 50757,\n",
-       " 50734,\n",
-       " 50618,\n",
-       " 50617,\n",
-       " 50578,\n",
-       " 50397,\n",
-       " 50395,\n",
-       " 50282,\n",
-       " 50250,\n",
-       " 50248,\n",
-       " 50230,\n",
-       " 50207,\n",
-       " 50195,\n",
-       " 50024,\n",
-       " 49953,\n",
-       " 49926,\n",
-       " 49900,\n",
-       " 49747,\n",
-       " 49677,\n",
-       " 49544,\n",
-       " 49520,\n",
-       " 49212,\n",
-       " 48982,\n",
-       " 48852,\n",
-       " 48664,\n",
-       " 48641,\n",
-       " 48559,\n",
-       " 48185,\n",
-       " 48177,\n",
-       " 48145,\n",
-       " 48033,\n",
-       " 47828,\n",
-       " 47793,\n",
-       " 47695,\n",
-       " 47618,\n",
-       " 47548,\n",
-       " 47457,\n",
-       " 47386,\n",
-       " 47230,\n",
-       " 47211,\n",
-       " 47080,\n",
-       " 47048,\n",
-       " 46864,\n",
-       " 46790,\n",
-       " 46471,\n",
-       " 46349,\n",
-       " 46135,\n",
-       " 46051,\n",
-       " 46002,\n",
-       " 45928,\n",
-       " 45637,\n",
-       " 45509,\n",
-       " 45431,\n",
-       " 45301,\n",
-       " 45177,\n",
-       " 44836,\n",
-       " 44398,\n",
-       " 44215,\n",
-       " 44186,\n",
-       " 44110,\n",
-       " 44031,\n",
-       " 44017,\n",
-       " 43984,\n",
-       " 43747,\n",
-       " 43743,\n",
-       " 43432,\n",
-       " 43171,\n",
-       " 43016,\n",
-       " 42922,\n",
-       " 42769,\n",
-       " 42742,\n",
-       " 42641,\n",
-       " 42529,\n",
-       " 42515,\n",
-       " 42241,\n",
-       " 42172,\n",
-       " 42133,\n",
-       " 41560,\n",
-       " 41417,\n",
-       " 41337,\n",
-       " 41291,\n",
-       " 41213,\n",
-       " 41074,\n",
-       " 40773,\n",
-       " 40571,\n",
-       " 40363,\n",
-       " 40214,\n",
-       " 40027,\n",
-       " 39983,\n",
-       " 39825,\n",
-       " 39632,\n",
-       " 39590,\n",
-       " 39239,\n",
-       " 39216,\n",
-       " 38666,\n",
-       " 38251,\n",
-       " 38144,\n",
-       " 38054,\n",
-       " 37598,\n",
-       " 37544,\n",
-       " 37511,\n",
-       " 37275,\n",
-       " 37128,\n",
-       " 35690,\n",
-       " 35527,\n",
-       " 35442,\n",
-       " 35415,\n",
-       " 35219,\n",
-       " 35214,\n",
-       " 34997,\n",
-       " 34750,\n",
-       " 34110,\n",
-       " 33819,\n",
-       " 33693,\n",
-       " 32615,\n",
-       " 32314,\n",
-       " 32306,\n",
-       " 32097,\n",
-       " 31988,\n",
-       " 30889,\n",
-       " 30888,\n",
-       " 27498,\n",
-       " 27382,\n",
-       " 26629,\n",
-       " 26124,\n",
-       " 24376,\n",
-       " 23891,\n",
-       " 23480,\n",
-       " 23475,\n",
-       " 22582,\n",
-       " 20817,\n",
-       " 20725,\n",
-       " 19976,\n",
-       " 19906,\n",
-       " 19472,\n",
-       " 14010,\n",
-       " 13401,\n",
-       " 13157,\n",
-       " 12932,\n",
-       " 12100,\n",
-       " 10875,\n",
-       " 5184,\n",
-       " 4809]"
+       "205805"
       ]
      },
-     "execution_count": 80,
+     "execution_count": 82,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sorted(sum_calorie_list, reverse=True)"
+    "sum(sorted(sum_calorie_list, reverse=True)[:3])"
    ]
   }
  ],
