day four complete

--- a/day_4/day_four_notebook.ipynb
+++ b/day_4/day_four_notebook.ipynb
@@ -2640,7 +2640,7 @@
   {
    "cell_type": "code",
    "execution_count": 174,
-   "id": "d88424ea",
+   "id": "322ade4a",
    "metadata": {},
    "outputs": [
     {
@@ -2661,7 +2661,7 @@
   {
    "cell_type": "code",
    "execution_count": 173,
-   "id": "7dad0456",
+   "id": "6fddd4fb",
    "metadata": {},
    "outputs": [
     {
@@ -2682,7 +2682,7 @@
   {
    "cell_type": "code",
    "execution_count": 194,
-   "id": "2063061b",
+   "id": "49fe57e3",
    "metadata": {},
    "outputs": [
     {
@@ -2702,7 +2702,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "44efb0a7",
+   "id": "572e214f",
    "metadata": {},
    "source": [
     "--- Part Two ---\n",
@@ -2722,19 +2722,73 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 202,
    "id": "9d08fdf4",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def update_check_assignments(input_data):\n",
+    "    counter = 0\n",
+    "    for i in input_data:\n",
+    "        # get 1st/2nd assignments for current comparison:\n",
+    "        first_assignment = i.split(',')[0]\n",
+    "        second_assignment = i.split(',')[1]\n",
+    "        \n",
+    "        first_assignment_digits = [int(i) for i in first_assignment.split(\"-\") if i.isdigit()]\n",
+    "        second_assignment_digits = [int(i) for i in second_assignment.split(\"-\") if i.isdigit()]\n",
+    "        \n",
+    "        \n",
+    "        # get ranges for both comparison:\n",
+    "        if first_assignment_digits[0] == first_assignment_digits[1]:\n",
+    "            first_range = []\n",
+    "            first_range.append(first_assignment_digits[0])\n",
+    "        else:\n",
+    "            first_range = list(range(first_assignment_digits[0],first_assignment_digits[1]+1))\n",
+    "            \n",
+    "        if second_assignment_digits[0] == second_assignment_digits[1]:\n",
+    "            second_range = []\n",
+    "            second_range.append(second_assignment_digits[0])\n",
+    "        else:\n",
+    "            second_range = list(range(second_assignment_digits[0],second_assignment_digits[1]+1))\n",
+    "        \n",
+    "        # convert ranges to single string for easy comparison (this failed; ex: '19' would be found for '909192', etc.):\n",
+    "        \n",
+    "#         s1 = ''.join(str(i) for i in first_range)\n",
+    "#         s2 = ''.join(str(i) for i in second_range)\n",
+    "\n",
+    "        # instead we'll take out digits, map to list of individual strings, then test if \n",
+    "        # all elements of list one are in 2 or all of 2 are in one, if so tick the counter\n",
+    "        \n",
+    "        list_string1 = list(map(str, first_range))\n",
+    "        list_string2 = list(map(str, second_range))\n",
+    "\n",
+    "        if any(elem in list_string1 for elem in list_string2) or any(elem in list_string2 for elem in list_string1):\n",
+    "            counter += 1\n",
+    "            \n",
+    "    return counter"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 203,
    "id": "737d68c4",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "804"
+      ]
+     },
+     "execution_count": 203,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 804 correct\n",
+    "update_check_assignments(cleaning_assignments)"
+   ]
   },
   {
    "cell_type": "code",
