adding day 6 data/notebook

--- a/day_5/day 5 notebook.ipynb
+++ b/day_5/day 5 notebook.ipynb
@@ -1946,7 +1946,7 @@
   {
    "cell_type": "code",
    "execution_count": 34,
-   "id": "a070dbf5",
+   "id": "d565e297",
    "metadata": {},
    "outputs": [
     {
@@ -2000,7 +2000,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 46,
    "id": "f9e2c04f",
    "metadata": {},
    "outputs": [
@@ -2123,7 +2123,6 @@
     "        move_to = current_instructions[2]\n",
     "        \n",
     "        to_move = []\n",
-    "        \n",
     "\n",
     "        # number of pops to perform:\n",
     "\n",
@@ -2186,7 +2185,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 47,
    "id": "ff9f4295",
    "metadata": {},
    "outputs": [
@@ -2199,7 +2198,7 @@
     }
    ],
    "source": [
-    "# GSLCMFBRP\n",
+    "# GSLCMFBRP is correct\n",
     "get_stack_results_9001(instructions)"
    ]
   },
@@ -2214,7 +2213,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "0fd53d10",
+   "id": "e0fc1822",
    "metadata": {},
    "outputs": [],
    "source": []
